--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     </nav>
 </header>
 
-<main>
+<main class="mainAbout">
     <h1>Om oss</h1>
     <p class="intro">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
         ByLAN Bergen er en frivillig organisasjon som ånder, og lever for å skape et godt spillmiljø,
