--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/socials.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/socials.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/slider.css">
     <script src="js/burger-menu.js" defer></script>
-
     <!--
     <script src="js/carousel.js" defer></script>
     -->
@@ -59,11 +59,39 @@
 </header>
 
 
+    <!-- slider container -->
+    <div class="slider">
 
-<article>
+        <!-- slide 1 -->
+        <div id="slide-0" class="slide">
+            <img src="https://source.unsplash.com/random?landscape,mountain" alt=""/>
+        </div>
 
+        <!-- slide 2 -->
+        <div id="slide-1" class="slide">
+            <img src="https://source.unsplash.com/random?landscape,cars" alt="" />
+        </div>
+
+        <!-- slide 3 -->
+        <div id="slide-2" class="slide">
+            <img src="https://source.unsplash.com/random?landscape,night" alt="" />
+        </div>
+
+        <!-- slide 4 -->
+        <div id="slide-3" class="slide">
+            <img src="https://source.unsplash.com/random?landscape,city" alt="" />
+        </div>
+
+        <!-- Control buttons -->
+        <button class="btn btn-next">></button>
+        <button class="btn btn-prev"><</button>
+    </div>
+    <!--<div class="loader"></div> -->
+
+
+<!--
     <p class="consoleMsg"></p>
-    <div class="carousel">
+    <div id="carousel" class="carousel">
         <div class="slide active" id="slide1">slide 1</div>
         <div class="slide" id="slide2">slide 2</div>
         <div class="slide" id="slide3">slide 3</div>
@@ -74,16 +102,16 @@
         <button class="btn btn-prev"> <</button>
     </div>
     <div class="loader"></div>
-</article>
+    -->
 
 <div class="row-wrapper">
-    <main>
+    <main class="mainHome">
         <h1>Velkommen til ByLan Bergen</h1>
-        <p class="intro">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
+        <p class="intro intro-home">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
             ByLAN Bergen er en frivillig organisasjon som ånder, og lever for å skape et godt spillmiljø,
             skape et fantastisk kulturtilbud og by på gode minner. ByLAN har blitt arrangert hvert år siden 2002.
         </p>
-        <p class="intro">Fram til 2005 ble det arrangert i Bergen Racketsenter på Bønes.
+        <p class="intro intro-home">Fram til 2005 ble det arrangert i Bergen Racketsenter på Bønes.
             I 2006, 2007 og 2008 i Arenum Messesenter, mens det i 2009 vendte tilbake til Bergen Racketsenter. Her ble
             vi
             værende til 2015, da vi arrangerte i Vestlandshallen, hvor vi arrangerte for hele 1200 deltakere!
@@ -121,25 +149,27 @@
     </div>
 </footer>
 
+
+
+<!--
 <script>
     const url = 'https://www.avena.dev/exam/wp-json/wp/v2/posts';
     //const urlMedia = 'https://www.avena.dev/exam/wp-json/wp/v2/media';
     const urlPostImg = 'https://www.avena.dev/exam/wp-json/wp/v2/posts?_embed';
-    let out = document.querySelector('#postsContainer');
+    let out = document.querySelector('#carousel');
 
     fetch(url)
         .then(response => response.json())
         .then(parsedData => {
             console.log(parsedData);
             parsedData.length = 3;
-            carouselData();
+            listData(parsedData);
         })
         .catch((error) => out.innerHTML = "Something's wrong!" + error)
         .finally(() => document.querySelector(".loader").remove());
 
-/*
+
     function listData(posts) {
-        posts.length = 5;
         console.log(`POSTS LENGTH =  ` + posts.length);
 
         posts.forEach((post) => {
@@ -158,15 +188,8 @@
             out.style.backgroundRepeat = "no-repeat";
         })
     }
-    */
-
-    function carouselData(slides) {
-        slides.length = 3;
-
-        url[0] = document.getElementById('slide1');
-        url[1] = document.getElementById('slide2');
-        url[2] = document.getElementById('slide3');
-    }
 </script>
+-->
+
 </body>
 </html>
