--- a/details.html
+++ b/details.html
@@ -12,9 +12,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/socials.css">
+    <link rel="stylesheet" href="css/head-foot-socials.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/burger-menu.js" defer></script>
 </head>
@@ -62,25 +60,16 @@
     </div>
     <p class="loader"></p>
     <p class="back"></p>
-</main>
 
-<section class="socials">
-    <h2>Følg oss gjerne!</h2>
-    <div class="row">
+
+    <div class="socials">
         <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
         <a href="https://www.youtube.com/channel/UCZkdFExCkcgBE1p49b1_8mw"><i class="fab fa-youtube"></i></a>
         <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
-
     </div>
-
-    <picture>
-        <source srcset="/media/cc0-images/surfer-240-200.jpg"
-                media="(min-width: 800px)">
-        <img src="/media/cc0-images/painted-hand-298-332.jpg" alt=""/>
-    </picture>
-</section>
+</main>
 
 <footer>
     <div class="row">
@@ -94,7 +83,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="last-row">
         <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
