--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/socials.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/head-foot-socials.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
-    <link rel="stylesheet" href="css/contact-form.css">
+    <link rel="stylesheet" href="css/contact.css">
     <script src="js/burger-menu.js" defer></script>
     <script src="js/contact.js" defer></script>
 </head>
@@ -57,26 +53,28 @@
     </nav>
 </header>
 
-<div class="row-wrapper">
-    <div id="successMessage" style="display:none;">
-        <div>
-            <strong><p>Takk for din tilbakemelding!</p></strong>
-            <p>Vi har motatt meldingen din, og svarer så fort vi kan.</p>
-            <p>Vi snakkes snart!</p>
-            <p><a href="index.html">Tilbake</a></p>
-        </div>
+<div id="successMessage" style="display:none;">
+    <div>
+        <strong><p>Takk for din tilbakemelding!</p></strong>
+        <p>Vi har motatt meldingen din, og svarer så fort vi kan.</p>
+        <p>Vi snakkes snart!</p>
+        <p><a href="index.html">Tilbake</a></p>
     </div>
-    <main class="contact-main">
-        <h1 id="hideTitle">Lurer du på noe?</h1>
-        <p id="hideText" class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, vel!</p>
+</div>
 
+
+<main class="mainContact">
+    <h1 id="hideTitle">Lurer du på noe?</h1>
+    <p id="hideText" class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, vel!</p>
+
+    <div class="row-wrapper">
         <div id="hideForm" class="row row-form">
             <form id="form" onchange="validateInputs()" class="row-item">
                 <h2>Vi vil høre fra deg!</h2>
 
                 <div class="input-field">
                     <label for="name">Navn:</label>
-                    <input id="name" name="name"  type="text">
+                    <input id="name" name="name" type="text">
                     <div class="error"></div>
                 </div>
 
@@ -88,7 +86,7 @@
 
                 <div class="input-field">
                     <label for="subject">Subject:</label>
-                    <input id="subject" name="subject"  type="text">
+                    <input id="subject" name="subject" type="text">
                     <div class="error"></div>
                     <br>
                 </div>
@@ -102,19 +100,16 @@
                 <button type="submit" onsubmit="validateInputs()" id="button">Send</button>
             </form>
         </div>
-    </main>
 
-    <section class="socials socials-home">
-        <h2>Følg oss gjerne!</h2>
-        <div class="row">
+        <div class="socials">
             <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
             <a href="https://www.youtube.com/channel/UCZkdFExCkcgBE1p49b1_8mw"><i class="fab fa-youtube"></i></a>
             <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
         </div>
-    </section>
-</div>
+    </div>
+</main>
 
 <footer>
     <div class="row">
@@ -128,7 +123,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="last-row">
         <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
