--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!--suppress ALL -->
 <html lang="en">
 <head>
     <title>Velkommen til ByLan!</title>
@@ -11,16 +10,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/header.css">
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="stylesheet" type="text/css" href="css/socials.css">
+    <link rel="stylesheet" type="text/css" href="css/head-foot-socials.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" type="text/css" href="css/slider.css">
     <script src="js/burger-menu.js" defer></script>
-    <!--
-    <script src="js/carousel.js" defer></script>
-    -->
+    <script src="js/slider.js" defer></script>
 </head>
 <body>
 
@@ -59,78 +53,63 @@
 </header>
 
 
-    <!-- slider container -->
-    <div class="slider">
+<!-- slider container -->
+<div class="slider">
 
-        <!-- slide 1 -->
-        <div id="slide-0" class="slide">
-            <img src="https://source.unsplash.com/random?landscape,mountain" alt=""/>
-        </div>
-
-        <!-- slide 2 -->
-        <div id="slide-1" class="slide">
-            <img src="https://source.unsplash.com/random?landscape,cars" alt="" />
-        </div>
-
-        <!-- slide 3 -->
-        <div id="slide-2" class="slide">
-            <img src="https://source.unsplash.com/random?landscape,night" alt="" />
-        </div>
-
-        <!-- slide 4 -->
-        <div id="slide-3" class="slide">
-            <img src="https://source.unsplash.com/random?landscape,city" alt="" />
-        </div>
-
-        <!-- Control buttons -->
-        <button class="btn btn-next">></button>
-        <button class="btn btn-prev"><</button>
+    <!-- slide 1 -->
+    <div id="slide-0" class="slide">
+        <img src="https://source.unsplash.com/random?landscape,mountain" alt=""/>
     </div>
-    <!--<div class="loader"></div> -->
 
-
-<!--
-    <p class="consoleMsg"></p>
-    <div id="carousel" class="carousel">
-        <div class="slide active" id="slide1">slide 1</div>
-        <div class="slide" id="slide2">slide 2</div>
-        <div class="slide" id="slide3">slide 3</div>
-        <div class="slide" id="slide4">slide 4</div>
-        <div class="slide" id="slide5">slide 5</div>
-
-        <button class="btn btn-next"> ></button>
-        <button class="btn btn-prev"> <</button>
+    <!-- slide 2 -->
+    <div id="slide-1" class="slide">
+        <img src="https://source.unsplash.com/random?landscape,cars" alt=""/>
     </div>
-    <div class="loader"></div>
-    -->
 
-<div class="row-wrapper">
-    <main class="mainHome">
-        <h1>Velkommen til ByLan Bergen</h1>
-        <p class="intro intro-home">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
-            ByLAN Bergen er en frivillig organisasjon som ånder, og lever for å skape et godt spillmiljø,
-            skape et fantastisk kulturtilbud og by på gode minner. ByLAN har blitt arrangert hvert år siden 2002.
-        </p>
-        <p class="intro intro-home">Fram til 2005 ble det arrangert i Bergen Racketsenter på Bønes.
-            I 2006, 2007 og 2008 i Arenum Messesenter, mens det i 2009 vendte tilbake til Bergen Racketsenter. Her ble
-            vi
-            værende til 2015, da vi arrangerte i Vestlandshallen, hvor vi arrangerte for hele 1200 deltakere!
-            Dessverre i 2017 måtte vi vemodig avlyse arrangementet, men vi er nå tilbake til der vi trives best og
-            alltid
-            har storkost oss: nemlig Bergen Racketsenter!</p>
-    </main>
+    <!-- slide 3 -->
+    <div id="slide-2" class="slide">
+        <img src="https://source.unsplash.com/random?landscape,night" alt=""/>
+    </div>
 
-    <section class="socials socials-home">
-        <h2>Følg oss gjerne!</h2>
-        <div class="row">
-            <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
-            <a href="https://www.youtube.com/channel/UCZkdFExCkcgBE1p49b1_8mw"><i class="fab fa-youtube"></i></a>
-            <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
-        </div>
-    </section>
+    <!-- slide 4 -->
+    <div id="slide-3" class="slide">
+        <img src="https://source.unsplash.com/random?landscape,city" alt=""/>
+    </div>
+
+    <!-- Control buttons -->
+    <button class="btn btn-next">></button>
+    <button class="btn btn-prev"><</button>
 </div>
+<!--<div class="loader"></div> -->
+
+<main class="mainHome">
+    <div class="row">
+        <div class="col-item">
+            <h1>Velkommen til ByLan Bergen</h1>
+            <p class="intro intro-home">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
+                ByLAN Bergen er en frivillig organisasjon som ånder, og lever for å skape et godt spillmiljø,
+                skape et fantastisk kulturtilbud og by på gode minner. ByLAN har blitt arrangert hvert år siden 2002.
+            </p>
+            <p class="intro intro-home">Fram til 2005 ble det arrangert i Bergen Racketsenter på Bønes.
+                I 2006, 2007 og 2008 i Arenum Messesenter, mens det i 2009 vendte tilbake til Bergen Racketsenter. Her
+                ble
+                vi
+                værende til 2015, da vi arrangerte i Vestlandshallen, hvor vi arrangerte for hele 1200 deltakere!
+                Dessverre i 2017 måtte vi vemodig avlyse arrangementet, men vi er nå tilbake til der vi trives best og
+                alltid
+                har storkost oss: nemlig Bergen Racketsenter!</p>
+        </div>
+    </div>
+
+    <div class="socials">
+        <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
+        <a href="https://www.youtube.com/channel/UCZkdFExCkcgBE1p49b1_8mw"><i class="fab fa-youtube"></i></a>
+        <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
+    </div>
+</main>
+
 
 <footer>
     <div class="row">
@@ -144,11 +123,10 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="last-row">
         <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
-
 
 
 <!--
