--- a/posts.html
+++ b/posts.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!--suppress ALL -->
 <html lang="en">
 <head>
     <title></title>
@@ -12,11 +11,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/posts.css">
-    <link rel="stylesheet" href="css/socials.css">
+    <link rel="stylesheet" href="css/head-foot-socials.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/posts.css">
     <script src="js/burger-menu.js" defer></script>
     <script src="js/posts-loadmore.js" defer></script>
 </head>
@@ -65,18 +62,16 @@
     <p class="loader"></p>
 
     <div id="loadMore">Last inn</div>
-</main>
 
-<section class="socials">
-    <h2>Følg oss gjerne!</h2>
-    <div class="row">
+    <div class="socials">
         <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
         <a href="https://www.youtube.com/channel/UCZkdFExCkcgBE1p49b1_8mw"><i class="fab fa-youtube"></i></a>
         <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
     </div>
-</section>
+</main>
+
 
 <footer>
     <div class="row">
@@ -90,7 +85,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="last-row">
         <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
