--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
 <main id="mainContact" class="mainContact">
     <h1 id="hideTitle">Lurer du på noe?</h1>
-    <p id="hideText" class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, vel!</p>
+    <p id="hideText" class="intro"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, vel!</span></p>
 
     <div id="hideForm" class="row row-form">
         <form id="form" class="row-item"
@@ -105,7 +105,7 @@
         </form>
     </div>
 
-    <div class="socials">
+    <div class="row-item socials">
         <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
@@ -114,20 +114,23 @@
     </div>
 </main>
 
+
 <footer>
     <div class="row">
-        <a href="index.html">
-            <img class="logo" src="media/logo/img.png" alt="logo">
-        </a>
+        <div class="row-item">
+            <a href="index.html">
+                <img class="logo" src="media/logo/img.png" alt="logo">
+            </a>
+        </div>
 
-        <div>
+        <div class="row-item">
+            <p>Copyright ©2021 ByLAN. All rights reserved. </p>
+        </div>
+
+        <div class="row-item">
             <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
             <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
         </div>
-    </div>
-
-    <div class="last-row">
-        <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
 </body>
