--- a/details.html
+++ b/details.html
@@ -62,7 +62,7 @@
     <p class="back"></p>
 
 
-    <div class="socials">
+    <div class="row-item socials">
         <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
@@ -71,23 +71,25 @@
     </div>
 </main>
 
+
 <footer>
     <div class="row">
-        <a href="index.html">
-            <img class="logo" src="media/logo/img.png" alt="logo">
-        </a>
+        <div class="row-item">
+            <a href="index.html">
+                <img class="logo" src="media/logo/img.png" alt="logo">
+            </a>
+        </div>
 
-        <div>
+        <div class="row-item">
+            <p>Copyright ©2021 ByLAN. All rights reserved. </p>
+        </div>
+
+        <div class="row-item">
             <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
             <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
         </div>
     </div>
-
-    <div class="last-row">
-        <p>Copyright ©2021 ByLAN. All rights reserved. </p>
-    </div>
 </footer>
-
 
 <script>
     const postContainer = document.querySelector('#postContainer');
