--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <!--<div class="loader"></div> -->
 
 <main class="mainHome">
-    <div class="row">
-        <div class="col-item">
+    <div class="flex-col">
+        <div>
             <h1>Velkommen til ByLan Bergen</h1>
             <p class="intro intro-home">ByLAN er et dataparty som arrangeres i høstferien i Bergen.
                 ByLAN Bergen er en frivillig organisasjon som ånder, og lever for å skape et godt spillmiljø,
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-    <div class="socials">
+    <div class="row-item socials">
         <a href="https://www.facebook.com/BylanBergen/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/bylan_bergen/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitch.tv/bylan/videos"><i class="fab fa-twitch"></i></a>
@@ -113,18 +113,20 @@
 
 <footer>
     <div class="row">
-        <a href="index.html">
-            <img class="logo" src="media/logo/img.png" alt="logo">
-        </a>
+        <div class="row-item">
+            <a href="index.html">
+                <img class="logo" src="media/logo/img.png" alt="logo">
+            </a>
+        </div>
 
-        <div>
+        <div class="row-item">
+            <p>Copyright ©2021 ByLAN. All rights reserved. </p>
+        </div>
+
+        <div class="row-item">
             <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
             <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
         </div>
-    </div>
-
-    <div class="last-row">
-        <p>Copyright ©2021 ByLAN. All rights reserved. </p>
     </div>
 </footer>
 
