ligger for langt etter.....

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 
 <!-- slider container -->
-<div class="slider">
+<div class="slider row">
 
     <!-- slide 1 -->
-    <div id="slide-0" class="slide">
+    <div class="slide">
         <img src="https://source.unsplash.com/random?landscape,mountain" alt=""/>
     </div>
 
