last mer-knapp + slider..

--- a/posts.html
+++ b/posts.html
@@ -66,7 +66,7 @@
 
         <p class="loader"></p>
 
-        <div id="loadMore">Last inn</div>
+        <button id="loadMore" type="button">Last inn</button>
 </main>
 
 <footer>
