--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/slider.css">
     <script src="js/burger-menu.js" defer></script>
-    <script src="js/slider.js" defer></script>
+    <script src="js/posts-slider.js" defer></script>
 </head>
 <body>
 
@@ -52,29 +52,8 @@
     </nav>
 </header>
 
-
-<!-- slider container -->
-<div class="slider row">
-    <!-- slide 1 -->
-    <div class="slide">
-        <img src="https://source.unsplash.com/random?landscape,mountain" alt=""/>
-    </div>
-
-    <!-- slide 2 -->
-    <div id="slide-1" class="slide">
-        <img src="https://source.unsplash.com/random?landscape,cars" alt=""/>
-    </div>
-
-    <!-- slide 3 -->
-    <div id="slide-2" class="slide">
-        <img src="https://source.unsplash.com/random?landscape,night" alt=""/>
-    </div>
-
-    <!-- slide 4 -->
-    <div id="slide-3" class="slide">
-        <img src="https://source.unsplash.com/random?landscape,city" alt=""/>
-    </div>
-
+<div class="slider">
+    <div class="slide"></div>
     <!-- Control buttons -->
     <button class="btn btn-next">></button>
     <button class="btn btn-prev"><</button>
