--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     <title>Velkommen til ByLan!</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-          crossorigin="anonymous" referrerpolicy="no-referrer">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -55,8 +51,12 @@
 <div class="slider">
     <div class="slide"></div>
     <!-- Control buttons -->
-    <button class="btn btn-next">></button>
-    <button class="btn btn-prev"><</button>
+    <button class="btn btn-next"> <span class="material-symbols-outlined">
+chevron_right
+</span></button>
+    <button class="btn btn-prev"><span class="material-symbols-outlined">
+chevron_left
+</span></button>
 </div>
 <!--<div class="loader"></div> -->
 
