last mer-knapp + slider..

--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@
         </a>
 
         <span id="toggle-button">
-      <i class="fas fa-bars fa-2x"></i>
+      <span class="material-symbols-outlined">
+menu
+</span>
             <strong>MENY</strong>
     </span>
     </div>
