--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <title>Velkommen til ByLan!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/head-foot-socials.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="js/burger-menu.js" defer></script>
     <script src="js/posts-slider.js" defer></script>
 </head>
@@ -33,7 +33,9 @@
         </a>
 
         <span id="toggle-button">
-      <i class="fas fa-bars fa-2x"></i>
+      <span class="material-symbols-outlined">
+menu
+</span>
             <strong>MENY</strong>
     </span>
     </div>
@@ -50,6 +52,7 @@
 
 <div class="slider">
     <div class="slide"></div>
+
     <!-- Control buttons -->
     <button class="btn btn-next"> <span class="material-symbols-outlined">
 chevron_right
