--- a/posts.html
+++ b/posts.html
@@ -39,7 +39,9 @@
         </a>
 
         <span id="toggle-button">
-      <i class="fas fa-bars fa-2x"></i>
+      <span class="material-symbols-outlined">
+menu
+</span>
             <strong>MENY</strong>
     </span>
     </div>
