--- a/contact.html
+++ b/contact.html
@@ -2,55 +2,47 @@
 <!--suppress ALL -->
 <html lang="en">
 <head>
+    <!-- TITLE, DESCRIPTION -->
     <title>Kontakt oss - ByLan</title>
-
+    <meta name="description" content="Send oss gjerne en melding direkte, eller kontakt oss på tlf.">
+    <!-- FAVICONS -->
+    <link rel="icon" href="/media/favicon/favicon.ico" sizes="any">
+    <link rel="icon" href="/media/favicon/favicon-16x16.png" type="image/svg+xml">
+    <link rel="manifest" href="/media/favicon/site.webmanifest">
+    <!-- VIEWPORT, CHARSET -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/partials.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <!-- Google Material Icons  &  Font Awesome Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
           integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer">
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/head-foot-socials.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <script src="js/burger-menu.js" defer></script>
+    <!-- SCRIPTS -->
+    <script src="js/nav.js" defer></script>
     <script src="js/contact.js" defer></script>
 </head>
 <body>
-
-<header class="header-desktop">
-    <a href="index.html">
-        <img class="logo" src="media/logo/img.png" alt="logo">
-    </a>
-    <nav>
-        <a href="index.html">Forside</a>
-        <a href="about.html">Om oss</a>
-        <a href="posts.html">Poster</a>
-        <a class="active" href="contact.html">Kontakt</a>
-    </nav>
-</header>
-
 <header class="header-mobile">
     <div class="section">
         <a href="index.html">
             <img class="logo" src="media/logo/img.png" alt="logo">
         </a>
-
-        <span id="toggle-button">
-      <span class="material-symbols-outlined">
-menu
-</span>
-            <strong>MENY</strong>
-    </span>
+        <span id="toggle-button" class="material-symbols-outlined">menu
+        <strong>MENY</strong>
+        </span>
     </div>
-
     <nav class="nav-mobile">
         <div id="toggle-element">
             <a href="index.html">Forside</a>
             <a href="about.html">Om oss</a>
             <a href="posts.html">Poster</a>
             <a class="active" href="contact.html">Kontakt</a>
+            <a href="report.html">Rapport</a>
         </div>
     </nav>
 </header>
@@ -60,7 +52,7 @@ menu
         <strong><p>Takk for din tilbakemelding!</p></strong>
         <p>Vi har motatt meldingen din, og svarer så fort vi kan.</p>
         <p>Vi snakkes snart!</p>
-        <p><a href="index.html">Tilbake</a></p>
+        <p><a href="index.html">TILBAKE</a></p>
     </div>
 </div>
 
@@ -71,10 +63,10 @@ menu
 
     <div id="hideForm" class="row row-form">
         <form id="form" class="row-item"
-              action="mailto:silje.angelvik@stud.noroff.no"
-              method="post"
-              enctype="text/plain"
-              onsubmit="return(validateInputs());">
+              action="mailto:siljeavena@hotmail.com"
+              method="POST"
+              enctype="text/plain">
+            <!-- onsubmit="validateInputs();" -->
             <h2>Vi vil høre fra deg!</h2>
 
             <div class="input-field">
@@ -102,8 +94,7 @@ menu
                 <div class="error"></div>
             </div>
 
-            <button type="submit" id="button" value="Send">
-                SEND</button>
+            <button id="button" type="submit" value="SEND" class="form-button">SEND</button>
         </form>
     </div>
 
@@ -115,7 +106,6 @@ menu
         <a href="https://discord.gg/6qnKn5Q6xf"><i class="fab fa-discord"></i></a>
     </div>
 </main>
-
 
 <footer>
     <div class="row">
@@ -130,8 +120,8 @@ menu
         </div>
 
         <div class="row-item">
-            <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
-            <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
+            <p><a href="mailto:info@bylan.net"><span class="material-symbols-outlined">call </span> info@bylan.net</a>
+            <p><a href="tel:92653403"><span class="material-symbols-outlined">mail</span> +47 926 53 403</a></p>
         </div>
     </div>
 </footer>
