--- a/details.html
+++ b/details.html
@@ -2,68 +2,56 @@
 <!--suppress ALL -->
 <html lang="en">
 <head>
+    <!-- TITLE, DESCRIPTION, FAVICON, VIEWPORT, CHARSET -->
     <title></title>
-    <meta name="description" content="Her finner du folka bak ByLAN,
-    og vi er alle like glad i gaming som dere.">
+    <meta name="description" content="">
+    <!-- FAVICONS -->
+    <link rel="icon" href="/media/favicon/favicon.ico" sizes="any">
+    <link rel="icon" href="/media/favicon/favicon-16x16.png" type="image/svg+xml">
+    <link rel="manifest" href="/media/favicon/site.webmanifest">
+    <!-- VIEWPORT, CHARSET -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/partials.css">
+    <!-- Google Material Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
           integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer">
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/head-foot-socials.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/burger-menu.js" defer></script>
+    <!-- SCRIPTS -->
+    <script src="js/nav.js" defer></script>
+    <script src="js/details.js" defer></script>
 </head>
 <body>
-
-<header class="header-desktop">
-    <a href="index.html">
-        <img class="logo" src="media/logo/img.png" alt="logo">
-    </a>
-    <nav>
-        <a href="index.html">Forside</a>
-        <a class="active" href="about.html">Om oss</a>
-        <a href="posts.html">Poster</a>
-        <a href="contact.html">Kontakt</a>
-    </nav>
-</header>
-
 <header class="header-mobile">
     <div class="section">
         <a href="index.html">
             <img class="logo" src="media/logo/img.png" alt="logo">
         </a>
-
-        <span id="toggle-button">
-    <span class="material-symbols-outlined">
-menu
-</span>
-            <strong>MENY</strong>
-    </span>
+        <span id="toggle-button" class="material-symbols-outlined">menu
+        <strong>MENY</strong>
+        </span>
     </div>
-
     <nav class="nav-mobile">
         <div id="toggle-element">
             <a href="index.html">Forside</a>
-            <a class="active" href="about.html">Om oss</a>
+            <a href="about.html">Om oss</a>
             <a href="posts.html">Poster</a>
             <a href="contact.html">Kontakt</a>
+            <a href="report.html">Rapport</a>
         </div>
     </nav>
 </header>
 
 <main>
-    <div id="postContainer">
-        <h1 id="postTitle"></h1>
-        <p id="postContent"></p>
-        <strong id="postLink"></strong>
-    </div>
+    <div id="postContainer"></div>
     <p class="loader"></p>
     <p class="back"></p>
 </main>
-
 
 <footer>
     <div class="row">
@@ -78,55 +66,10 @@ menu
         </div>
 
         <div class="row-item">
-            <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
-            <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
+            <p><a href="mailto:info@bylan.net"><span class="material-symbols-outlined">call </span> info@bylan.net</a>
+            <p><a href="tel:92653403"><span class="material-symbols-outlined">mail</span> +47 926 53 403</a></p>
         </div>
     </div>
 </footer>
-
-<script>
-    const postContainer = document.querySelector('#postContainer');
-    const queryString = document.location.search;
-    const params = new URLSearchParams(queryString);
-    const postId = params.get("guid");
-    // let url = `https://valorant-api.com/v1/agents/${agentUuid}`;
-    let url = 'https://www.avena.dev/exam/wp-json/wp/v2/posts/${postId}';
-
-
-    fetch(url)
-        .then(response => response.json())
-        .then(parsedData => {
-            //console.log(data.data + `, Data Value: ` + data.data.value + `, Data Type: ` + typeof data.data);
-            listData(parsedData.data);
-        })
-        .catch(error => {
-            postContainer.innerHTML = "I'm sorry, we couldn't get what you're looking for.";
-            console.log("Error message: " + error);
-        })
-        .finally(() => {
-            document.querySelector(".loader").remove();
-            document.querySelector(".back").innerHTML = `<a href="index.html">Back</a>`;
-        })
-
-    function listData(postId) {
-        //console.log(agentUuid);
-        document.title = postId.title.rendered;
-
-        postContainer = `
-        <div id="postItem">
-               <div id="postInnerItem">
-               <img src="${postId.featured_media}" alt="${postId.excerpt.rendered}">
-               </div>
-               <div id="postInnerItem">
-                 <h1 id="postsTitle">${postId.title.rendered}</h1>
-                <p id="postExcerpt">${postId.content.rendered}</p>
-                </div>
-                </div>
-        `;
-
-        out.style.backgroundImage = `url(${post.featured_media})`;
-        out.style.backgroundRepeat = "no-repeat";
-    }
-</script>
 </body>
 </html>
