--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- TITLE, DESCRIPTION -->
     <title>Velkommen til ByLan!</title>
+    <meta name="description" content="Velkommen til ByLan! Bergens kuleste spillarrangement!">
+    <!-- FAVICONS -->
+    <link rel="icon" href="/media/favicon/favicon.ico" sizes="any">
+    <link rel="icon" href="/media/favicon/favicon-16x16.png" type="image/svg+xml">
+    <link rel="manifest" href="/media/favicon/site.webmanifest">
+    <!-- VIEWPORT, CHARSET -->
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/head-foot-socials.css">
+    <meta charset="UTF-8">
+    <!-- STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/partials.css">
     <link rel="stylesheet" type="text/css" href="css/slider.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="js/burger-menu.js" defer></script>
-    <script src="js/posts-slider.js" defer></script>
+    <!-- Google Material Icons  &  Font Awesome Icons -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- SCRIPTS -->
+    <script src="js/nav.js" defer></script>
+    <script src="js/slider.js" defer></script>
 </head>
 <body>
-
-<header class="header-desktop">
-    <a href="index.html">
-        <img class="logo" src="media/logo/img.png" alt="logo">
-    </a>
-    <nav>
-        <a class="active" href="index.html">Forside</a>
-        <a href="about.html">Om oss</a>
-        <a href="posts.html">Poster</a>
-        <a href="contact.html">Kontakt</a>
-    </nav>
-</header>
-
 <header class="header-mobile">
     <div class="section">
         <a href="index.html">
             <img class="logo" src="media/logo/img.png" alt="logo">
         </a>
-
-        <span id="toggle-button">
-      <span class="material-symbols-outlined">
-menu
-</span>
-            <strong>MENY</strong>
-    </span>
+        <span id="toggle-button" class="material-symbols-outlined">menu
+        <strong>MENY</strong>
+        </span>
     </div>
-
     <nav class="nav-mobile">
         <div id="toggle-element">
             <a class="active" href="index.html">Forside</a>
             <a href="about.html">Om oss</a>
             <a href="posts.html">Poster</a>
             <a href="contact.html">Kontakt</a>
+            <a href="report.html">Rapport</a>
         </div>
     </nav>
 </header>
 
-<div class="slider">
-    <div class="slide"></div>
+<div id="slider-loop">
+    <div class="slide-pic active"></div>
 
-    <!-- Control buttons -->
-    <button class="btn btn-next"> <span class="material-symbols-outlined">
-chevron_right
-</span></button>
-    <button class="btn btn-prev"><span class="material-symbols-outlined">
-chevron_left
-</span></button>
+    <div class="slider-buttons">
+        <div class="slider-back-btn">
+            <span class="material-symbols-outlined slider-back-icon">chevron_left</span>
+        </div>
+
+        <div class="slider-next-btn">
+            <span class="material-symbols-outlined slider-next-icon">chevron_right</span>
+        </div>
+    </div>
 </div>
-<!--<div class="loader"></div> -->
+<!-- <div class="loader"></div> -->
 
 <main class="mainHome">
     <div class="flex-col">
@@ -104,52 +104,10 @@ chevron_left
         </div>
 
         <div class="row-item">
-            <p><a href="mailto:info@bylan.net"><i class="fas fa-inbox mx-3"></i>&nbsp; info@bylan.net</a>
-            <p><a href="tel:92653403"><i class="fas fa-phone mx-3"></i>&nbsp; +47 926 53 403</a></p>
+            <p><a href="mailto:info@bylan.net"><span class="material-symbols-outlined">call </span> info@bylan.net</a>
+            <p><a href="tel:92653403"><span class="material-symbols-outlined">mail</span> +47 926 53 403</a></p>
         </div>
     </div>
 </footer>
-
-
-<!--
-<script>
-    const url = 'https://www.avena.dev/exam/wp-json/wp/v2/posts';
-    //const urlMedia = 'https://www.avena.dev/exam/wp-json/wp/v2/media';
-    const urlPostImg = 'https://www.avena.dev/exam/wp-json/wp/v2/posts?_embed';
-    let out = document.querySelector('#carousel');
-
-    fetch(url)
-        .then(response => response.json())
-        .then(parsedData => {
-            console.log(parsedData);
-            parsedData.length = 3;
-            listData(parsedData);
-        })
-        .catch((error) => out.innerHTML = "Something's wrong!" + error)
-        .finally(() => document.querySelector(".loader").remove());
-
-
-    function listData(posts) {
-        console.log(`POSTS LENGTH =  ` + posts.length);
-
-        posts.forEach((post) => {
-            out.innerHTML +=
-                `<div id="postsItem" class="item">
-               <div id="postsInnerItem">
-               <a class="postsTitle" href="details.html?guid=${post.id}">
-                        <h3 id="postsTitle">${post.title.rendered}</h3>
-                  </a>
-                  <p id="postsExcerpt">${post.excerpt.rendered}</p>
-                  <a id="postsLink" href="details.html?guid=${post.id}">Les mer..</a>
-                </div>
-                </div>`;
-
-            out.style.backgroundImage = urlPostImg;
-            out.style.backgroundRepeat = "no-repeat";
-        })
-    }
-</script>
--->
-
 </body>
 </html>
